Removed info in index page

--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@ layout: default
 <div class="search container max-width-2">
 		<div id="search-container">
 			<h3 class="center mb3 blue">Chowdown Search</h3>
-		<input type="text" id="search-input" placeholder="search titles or ingredients...">
+		<input type="text" id="search-input" placeholder="Sök på titel eller ingridienser...">
 		</div>
 </div>
 
